--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
+    "lodash.find": "^4.6.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^4.4.9",
@@ -54,6 +56,7 @@
     "ghooks": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest-cli": "^23.6.0",
+    "mime": "^2.3.1",
     "prop-types": "^15.6.0",
     "react-hot-loader": "4.3.3",
     "react-test-renderer": "^16.5.2",
