--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.find": "^4.6.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
