--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-runtime": "^6.26.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^1.0.0",
+    "cypress": "^3.1.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^4.15.0",
